docs/0.17/_sources/api/gammapy.irf.EDispKernelMap.rst.txt
EDispKernelMap
==============

.. currentmodule:: gammapy.irf

.. autoclass:: EDispKernelMap
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~EDispKernelMap.edisp_map

   .. rubric:: Methods Summary

   .. autosummary::

      ~EDispKernelMap.copy
      ~EDispKernelMap.cutout
      ~EDispKernelMap.from_diagonal_response
      ~EDispKernelMap.from_geom
      ~EDispKernelMap.from_hdulist
      ~EDispKernelMap.get_edisp_kernel
      ~EDispKernelMap.read
      ~EDispKernelMap.stack
      ~EDispKernelMap.to_hdulist
      ~EDispKernelMap.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: edisp_map

   .. rubric:: Methods Documentation

   .. automethod:: copy
   .. automethod:: cutout
   .. automethod:: from_diagonal_response
   .. automethod:: from_geom
   .. automethod:: from_hdulist
   .. automethod:: get_edisp_kernel
   .. automethod:: read
   .. automethod:: stack
   .. automethod:: to_hdulist
   .. automethod:: write
